# AdavancedCCompiling

./: .gitignore
cp2/: demoApp  demoAppX86  function.c  function.h  function.s  main.c  objdump.txt  objdumpX86.txt  symbolX86.txt
cp3/: main.cpp  objdump.txt  regularBuild  staticBuild
cp3/sharedLibs/: CMakeLists.txt
cp3/sharedLibs/include/: mylib.h
cp3/sharedLibs/src/: bar.c  foo.c
